# yt-whisper-transcriber

./: .gitignore  config.py  main.py  pyproject.toml
