[tool.poetry]
name = "yt-whisper-transcriber"
version = "0.1.0"
description = ""
authors = ["Nikolay Petrov <nikilp@gmail.com>"]
readme = "README.md"
packages = [{include = "yt_whisper_transcriber"}]

[tool.poetry.dependencies]
python = "^3.10"
webrtcvad = "^2.0.10"
scrapetube = "^2.3.1"
pandas = "^2.0.0"
setuptools = "^67.6.1"
yt-dlp = "^2023.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
